--- a/views/index.ejs
+++ b/views/index.ejs
@@ -184,6 +184,8 @@
             let personas = [];
             personas = JSON.parse(decodeURIComponent('<%- encodeURIComponent(JSON.stringify(personas)) %>'));
 
+            console.log('test')
+
             function convertStarsToNumber(stars) {
                 if (!stars) {
                     return 0;
